fixing some bug and adding another pop up

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             class="col-6 col-sm-5 btn bgPrimaryColor d-flex justify-content-center align-items-center text-light py-2 px-3 rounded-5 fw-semibold fs-5"
             >Find some <i class="bi bi-arrow-up-right-square ms-2 fs-4"></i
           ></a>
-          <a class="col-4 ms-4 textPrimaryColor fw-medium fs-5" href="">Login</a>
+          <a class="col-4 ms-4 textPrimaryColor fw-medium fs-5" href="view/login.html">Login</a>
         </div>
       </div>
       <img class="col-4 d-none d-lg-block img-fluid" src="asset/book.webp" alt="" />
@@ -302,7 +302,7 @@
               >Buy now</a
             >
           </div>
-          <div class="col-12 col-md-5 col-xl-3  border-0 p-0 rounded-3">
+          <div class="col-12 col-md-5 col-xl-3 border-0 p-0 rounded-3">
             <img
               style="object-fit: cover"
               class="img-fluid w-100 rounded-3"
@@ -421,7 +421,7 @@
     <section id="brand" class="container-fluid h-100 py-5 m-0">
       <div class="container-lg p-0">
         <h2 class="textPrimaryColor fw-bold">Choose By Brand</h2>
-        <div class="row justify-content-center gap-5 gap-xl-4 m-0 mt-5">
+        <div class="row justify-content-center gap-5 gap-xl-4 gap-xxl-5 m-0 mt-5">
           <div
             class="col-10 col-sm-5 col-md-3 col-lg-3 col-xl-2 d-flex justify-content-center align-items-center bg-light shadow-sm py-2 px-3 rounded-3"
           >
@@ -569,7 +569,7 @@
       <div class="container-lg p-0">
         <h2 class="textPrimaryColor fw-bold">Service that we provide</h2>
         <div class="row d-flex row m-0 justify-content-between mt-5 gap-5">
-          <div class="col-12 col-sm-5 col-xl-3 bg-light rounded-4 p-0 rounded-3 shadow-sm h-100">
+          <div class="col-12 col-sm-5 col-xl-3 bg-light rounded-4 p-0 rounded-4 shadow-sm h-100">
             <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
               Online Payment Process
             </h3>
@@ -583,7 +583,7 @@
               loading="lazy"
             />
           </div>
-          <div class="col-12 col-sm-5 col-xl-3 bg-light rounded-3 p-0 rounded-3 shadow-sm h-100">
+          <div class="col-12 col-sm-5 col-xl-3 bg-light rounded-3 p-0 rounded-4 shadow-sm h-100">
             <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
               You Can Get The Cash Back Easily
             </h3>
@@ -597,7 +597,7 @@
               loading="lazy"
             />
           </div>
-          <div class="col-12 col-md-5 col-xl-3 bg-light rounded-3 p-0 rounded-3 shadow-sm">
+          <div class="col-12 col-md-5 col-xl-3 bg-light rounded-3 p-0 rounded-4 shadow-sm">
             <h3 class="fw-bold pt-4 px-4 textSecondaryColor">
               Home Delivery Option
             </h3>
@@ -700,10 +700,10 @@
           </li>
           <li class="col-12 list-unstyled p-0">
             <label for="">Message</label><br>
-            <textarea style="resize: none;" rows="8" class="form-control w-100 border-0 bg-light rounded-3 py-2 px-3 mt-2" type="text" placeholder="Enter you message"></textarea>
+            <textarea style="resize: none;" rows="8" class="form-control w-100 border-0 bg-light rounded-3 py-2 px-3 mt-2" type="text" placeholder="Enter you message" required></textarea>
           </li>
           <li class="col-12 list-unstyled p-0 mt-1">
-            <a class="btn bgSecondaryColor w-100 text-light py-3 fs-5 fw-bold rounded-3">Send message</a>
+            <a class="btn bgSecondaryColor w-100 text-light py-3 fs-5 fw-bold rounded-3" onclick="showInfoPopUp()">Send message</a>
           </li>
         </ul>
       </fo>
