product page, done

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         </h5>
         <div class="d-flex justify-content-center justify-content-lg-start align-items-center">
           <a
+            href="view/product.html"
             class="col-6 col-sm-5 btn bgPrimaryColor d-flex justify-content-center align-items-center text-light py-2 px-3 rounded-5 fw-semibold fs-5"
             >Find some <i class="bi bi-arrow-up-right-square ms-2 fs-4"></i
           ></a>
