detail product, done

--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
               </div>
             </div>
             <a
-              href=""
+              href="view/bumi.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
-              >Buy now</a
+              >Buy</a
             >
           </div>
           <div class="col-12 col-sm-5 col-xl-3 border-0 p-0 rounded-3">
@@ -297,10 +297,10 @@
               </div>
             </div>
             <a
-              href=""
+              href="view/why.html"
               style="color: #0e8ed7"
               class="btn btn-light rounded-5 w-100 py-2 fw-bold fs-5 mt-3"
-              >Buy now</a
+              >Buy</a
             >
           </div>
           <div class="col-12 col-md-5 col-xl-3 border-0 p-0 rounded-3">
