--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             style="background-image: url('asset/ensiklopedia.webp'); background-size: cover;"
             class="card col-12 col-sm-5 col-lg-2 border-0 p-0 rounded-3"
           >
-            <h3 class="opacity-1 text-light fw-bold mt-3 text-center">
+            <h3 style="text-shadow: 3px 3px black;" class="opacity-1 text-light fw-bold mt-3 text-center">
               encyclopedia
             </h3>
           </div>
@@ -170,13 +170,13 @@
             style="background-image: url('asset/komik.webp'); background-size: cover;"
             class="card col-12 col-sm-5 col-lg-2 border-0 p-0 rounded-3"
           >
-            <h3 class="opacity-1 text-light fw-bold mt-3 text-center">comic</h3>
+            <h3 style="text-shadow: 3px 3px black;" class="opacity-1 text-light fw-bold mt-3 text-center">comic</h3>
           </div>
           <div
             style="background-image: url('asset/majalah.webp'); background-size: cover;"
             class="card col-12 col-sm-5 col-lg-2 border-0 p-0 rounded-3"
           >
-            <h3 class="opacity-1 text-light fw-bold mt-3 text-center">
+            <h3 style="text-shadow: 3px 3px black;" class="opacity-1 text-light fw-bold mt-3 text-center">
               magazine
             </h3>
           </div>
@@ -184,7 +184,7 @@
             style="background-image: url('asset/resep.webp'); background-size: cover;"
             class="card col-12 col-sm-5 col-lg-2 border-0 p-0 rounded-3"
           >
-            <h3 class="opacity-1 text-light fw-bold mt-3 text-center">
+            <h3 style="text-shadow: 3px 3px black;" class="opacity-1 text-light fw-bold mt-3 text-center">
               cooking
             </h3>
           </div>
@@ -192,7 +192,7 @@
             style="background-image: url('asset/novel.webp'); background-size: cover;"
             class="card col-12 col-lg-2 border-0 p-0 rounded-3"
           >
-            <h3 class="opacity-1 text-light fw-bold mt-3 text-center">novel</h3>
+            <h3 style="text-shadow: 3px 3px black;" class="opacity-1 text-light fw-bold mt-3 text-center">novel</h3>
           </div>
         </div>
       </div>
